[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/potions.png" type="Texture" id=1]
[ext_resource path="res://Potions.gd" type="Script" id=2]
[ext_resource path="res://sprites/alt_potions.png" type="Texture" id=3]
[ext_resource path="res://alt.gd" type="Script" id=4]
[ext_resource path="res://sound/brew.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/wrong.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/combine.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 7.84172 )

[node name="Potions" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 7
script = ExtResource( 2 )

[node name="alt" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 7
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="ActivatedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
